@@ -271,6 +271,19 @@ void drawCollisions(void *ptr, void *data)
 
 	[[Director sharedDirector] runScene: scene];
 }
+
+// getting a call, pause the game
+-(void) applicationWillResignActive:(UIApplication *)application
+{
+	[[Director sharedDirector] pause];
+}
+
+// call got rejected
+-(void) applicationDidBecomeActive:(UIApplication *)application
+{
+	[[Director sharedDirector] resume];
+}
+
 @end
 
 
