@@ -154,4 +154,16 @@ float randfloat() {
 	[[Director sharedDirector] runScene: scene];
 }
 
+// getting a call, pause the game
+-(void) applicationWillResignActive:(UIApplication *)application
+{
+	[[Director sharedDirector] pause];
+}
+
+// call got rejected
+-(void) applicationDidBecomeActive:(UIApplication *)application
+{
+	[[Director sharedDirector] resume];
+}
+
 @end
